footer contrast violation corrected

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -327,6 +327,15 @@ a {
     flex-direction: column; 
     align-items: center; 
   }
+
+  footer a {
+    color: var(--accent-color1);
+    text-decoration: none; 
+  }
+  
+  footer a:hover {
+    color: var(--accent-color3); 
+  }
   
   footer p {
     font-size: 1rem;
